# TamperGuard-File-Integrity-Checker

./: .gitignore  CMakeLists.txt  README.md
include/: integrity_checker.h
src/: integrity_checker.cpp  main.cpp
